<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="heuillet@todo.todo">heuillet</maintainer>
  <license>TODO: License declaration</license>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
